--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: NuGet Release
       run: |
-        dotnet nuget push RGBradCSharpTest.${{ env.RELEASE_VERSION }}.nupkg \
+        dotnet nuget push \
+          bin/Release/RGBradCSharpTest.${{ env.RELEASE_VERSION }}.nupkg \
           --source https://nuget.pkg.github.com/brad-rocketgate/index.json \
           --api-key ${{ secrets.GITHUB_TOKEN }}
