--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -26,9 +26,16 @@ jobs:
         body: ${{ github.event.workflow_run.head_commit.message }}
         files: bin/Release/RGBradCSharpTest.${{ env.RELEASE_VERSION }}.nupkg
 
-    - name: NuGet Release
+    - name: Push to GitHub NuGet registry
       run: |
         dotnet nuget push \
           bin/Release/RGBradCSharpTest.${{ env.RELEASE_VERSION }}.nupkg \
           --source https://nuget.pkg.github.com/brad-rocketgate/index.json \
+          --api-key ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push to NuGet.org registry
+      run: |
+        dotnet nuget push \
+          bin/Release/RGBradCSharpTest.${{ env.RELEASE_VERSION }}.nupkg \
+          --source https://api.nuget.org/v3/index.json
           --api-key ${{ secrets.GITHUB_TOKEN }}
